--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="main.css" />
   </head>
   <body>
-    <h1>HELLO WORLD</h1>
+    <h1>PROJECT 1</h1>
+    <script src="script.js"></script>
   </body>
 </html>
