--- a/index.html
+++ b/index.html
@@ -5,9 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="main.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=VT323&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
+    <div class="gameBoards">
+      <div class="scoreboard"></div>
+      <div class="scoreboard">
+        <div class="score">Your score is <span id="scoreSpan">0</span>!</div>
+        <div class="score">No. of lives <span id="lifeSpan">0</span></div>
+        <div class="score">
+          The all-time highscore is <span id="highScore">0</span>
+        </div>
+      </div>
+    </div>
     <div class="grid"></div>
+    <div class="modal">A MESSAGE HERE</div>
     <script src="script.js"></script>
   </body>
 </html>
