--- a/index.html
+++ b/index.html
@@ -13,17 +13,20 @@
   </head>
   <body>
     <div class="gameBoards">
-      <div class="scoreboard"></div>
+      <div class="scoreboard"><button>PLAY</button></div>
       <div class="scoreboard">
-        <div class="score">Your score is <span id="scoreSpan">0</span>!</div>
-        <div class="score">No. of lives <span id="lifeSpan">0</span></div>
+        <div class="score">Your score is: <span id="scoreSpan">0</span>!</div>
+        <div class="score">No. of lives: <span id="lifeSpan">0</span></div>
         <div class="score">
-          The all-time highscore is <span id="highScore">0</span>
+          The all-time highscore is: <span id="highScore">0</span>
         </div>
       </div>
     </div>
     <div class="grid"></div>
-    <div class="modal">A MESSAGE HERE</div>
+    <div class="modal">
+      <img id="modID" src="putinlaugh.JPG" />
+      A MESSAGE HERE
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
