more monday work

--- a/index.html
+++ b/index.html
@@ -13,30 +13,33 @@
   </head>
   <body>
     <div class="hero">
+      <img src="star.png" />
       <h1>HUNT FOR THE RED OCTOBER</h1>
-      <div class="infobox">
-        <h2>MISSION</h2>
-        <ul>
-          <li>Evade Enemy Submarines</li>
-          <li>Collect Sunken Treasure</li>
-          <li>Drink Vodka</li>
-        </ul>
-      </div>
-      <div class="infobox">
-        <h2>RULES</h2>
-        <ul>
-          <li>Collect All Treasure To Win</li>
-          <li>Drink Vodka To Gain Extra Lives</li>
-          <li>Keep An Eye On The Time</li>
-        </ul>
-      </div>
-      <div class="infobox">
-        <h2>MAPS</h2>
-        <a href="#grid"><button class="mapChoice">CLASSIC</button></a>
-        <a href="#grid"><button class="mapChoice">CAVERNS</button></a>
-        <a href="#grid"><button class="mapChoice">OPEN WATER</button></a>
-        <a href="#grid"><button class="mapChoice">THE CHANNEL</button></a>
-        <a href="#grid"><button class="mapChoice">LABYRINTH</button></a>
+      <div class="container">
+        <div class="infobox">
+          <h2>MISSION</h2>
+          <ul>
+            <li>Evade Enemy Submarines</li>
+            <li>Collect Sunken Treasure</li>
+            <li>Drink Vodka</li>
+          </ul>
+        </div>
+        <div class="infobox">
+          <h2>RULES</h2>
+          <ul>
+            <li>Collect All Treasure To Win</li>
+            <li>Drink Vodka To Gain Extra Lives</li>
+            <li>Keep An Eye On The Time</li>
+          </ul>
+        </div>
+        <div class="infobox">
+          <h2>MAPS</h2>
+          <a href="#grid"><button class="mapChoice">CLASSIC</button></a>
+          <a href="#grid"><button class="mapChoice">CAVERNS</button></a>
+          <a href="#grid"><button class="mapChoice">OPEN WATER</button></a>
+          <a href="#grid"><button class="mapChoice">THE CHANNEL</button></a>
+          <a href="#grid"><button class="mapChoice">LABYRINTH</button></a>
+        </div>
       </div>
     </div>
     <div class="container">
