--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <h2>RULES</h2>
           <ul>
             <li>Collect All Treasure To Win</li>
-            <li>Drink Vodka To Gain Extra Lives</li>
+            <li>Drink Vodka For Extra Lives</li>
             <li>Keep An Eye On The Time</li>
           </ul>
         </div>
@@ -44,9 +44,13 @@
     </div>
     <div class="container">
       <div class="gameBoards">
-        <div class="scoreboard"><button id="start">PLAY</button></div>
         <div class="scoreboard">
-          <div class="score">Your score is: <span id="scoreSpan">0</span>!</div>
+          <button id="start">PLAY</button>
+          <button id="stop">STOP</button>
+          <button id="reset">RESET</button>
+        </div>
+        <div class="scoreboard">
+          <div class="score">Your score is: <span id="scoreSpan">0</span></div>
           <div class="score">No. of lives: <span id="lifeSpan">0</span></div>
           <div class="score">
             The all-time highscore is: <span id="highScore">0</span>
@@ -56,7 +60,7 @@
       <div class="gameBoards">
         <div class="scoreboard" id="notifications">ON ACTIVE PATROL</div>
       </div>
-      <div class="grid" id="grid"></div>
+      <div class="grid" id="grid"><img id="putin" src="putinlaugh.JPG" /></div>
     </div>
     <script src="script.js"></script>
   </body>
