--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           </ul>
         </div>
         <div class="infobox maps">
-          <h2>MAPS</h2>
+          <h2>PICK A MAP</h2>
           <a href="#grid"><button class="mapChoice">CLASSIC</button></a>
           <a href="#grid"><button class="mapChoice">CAVERNS</button></a>
           <a href="#grid"><button class="mapChoice">OPEN WATER</button></a>
