--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div class="hero">
-      <img src="star.png" />
+      <img src="star.png" id="star" />
       <h1>HUNT FOR THE RED OCTOBER</h1>
       <div class="container">
         <div class="infobox">
