--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <div class="grid" id="grid"><img id="putin" src="putinlaugh.JPG" /></div>
     </div>
     <audio src="sonar.wav"></audio>
-    <footer><img id="speaker" src="speaker1.png" /></footer>
+    <div id="audio"><img id="speaker" src="speaker1.png" /></div>
     <script src="script.js"></script>
   </body>
 </html>
